--- a/Cafeine/Pages/Animelist.xaml
+++ b/Cafeine/Pages/Animelist.xaml
@@ -6,7 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        
+    </Page.Resources>
     <Grid Background="#FFF2F2F2">
         <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="65,16,0,0" VerticalAlignment="Top" BorderThickness="0" Width="120" Background="#FFF2F2F2" PlaceholderText="Anime" FontSize="20">
             <ListBoxItem Content="Anime" IsDoubleTapEnabled="False" IsHoldingEnabled="False" IsRightTapEnabled="False"/>
@@ -16,12 +18,12 @@
             <PivotItem Header="Curently Watching" Margin="12,0,0,0">
                 <GridView x:Name="currentwatch_anime" Foreground="{x:Null}">
                     <GridView.ItemTemplate>
-                        <DataTemplate>
+                        <DataTemplate >
                             <Grid Margin="5">
                                 <RelativePanel Width="320" Background="White">
-                                    <Image x:Name="theimage" Source="{Binding sourceimage}"  MaxHeight="142" MaxWidth="105" HorizontalAlignment="Left" VerticalAlignment="Top" RelativePanel.AlignLeftWithPanel="True" Stretch="UniformToFill" Margin="0,1,5,0"/>
+                                    <Image x:Name="theimage" Source="{Binding imgurl}"  MaxHeight="142" MaxWidth="105" HorizontalAlignment="Left" VerticalAlignment="Top" RelativePanel.AlignLeftWithPanel="True" Stretch="UniformToFill" Margin="0,1,5,0"/>
                                     <TextBlock x:Name="thetitle"  Text="{Binding Title}" FontFamily="ms-appx:/Font/Ubuntu-C.ttf#Ubuntu" FontSize="18" RelativePanel.RightOf="theimage" TextTrimming="None" TextWrapping="Wrap" Foreground="#FF272525"/>
-                                    <TextBlock Text="{Binding Myscore}" RelativePanel.Below="thetitle" RelativePanel.RightOf="theimage" HorizontalAlignment="Left" FontFamily="Segoe UI Semilight" FontWeight="SemiLight"/>
+                                    <TextBlock Text="{Binding my_score}" RelativePanel.Below="thetitle" RelativePanel.RightOf="theimage" HorizontalAlignment="Left" FontFamily="Segoe UI Semilight" FontWeight="SemiLight"/>
                                 </RelativePanel>
                             </Grid>
                         </DataTemplate>
