--- a/Cafeine/Pages/MoreDetails.xaml
+++ b/Cafeine/Pages/MoreDetails.xaml
@@ -1,15 +1,17 @@
 ﻿<Page
-    x:Class="Cafeine.Pages.MoreDetails"
+    x:Class="Cafeine.MoreDetails"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock x:Name="Title" HorizontalAlignment="Left" Height="31" Margin="126,98,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="741"/>
-        <TextBlock x:Name="Rating" HorizontalAlignment="Left" Height="31" Margin="126,129,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="85"/>
-        <Image x:Name="image" HorizontalAlignment="Left" Height="318" Margin="394,72,0,0" VerticalAlignment="Top" Width="262"/>
-
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="70,0,0,0">
+        <Button x:Name="BackBut"  FontSize="15" Height="48" VerticalAlignment="Top" HorizontalAlignment="Left" Click="backbutton" Content="" FontFamily="{ThemeResource SymbolThemeFontFamily}" Background="{x:Null}" Width="48" Margin="-60,66,0,0" />
+        <RelativePanel>
+            <TextBlock x:Name="Title" FontFamily="Segoe UI" FontWeight="Thin" FontSize="25" Text="Kobayashi-san Chi no Maid Dragon"  RelativePanel.RightOf="image"  HorizontalAlignment="Left" Height="40" Padding="10,0,0,0" Margin="0,27,0,0" VerticalAlignment="Top" />
+            <TextBlock x:Name="User_Rating" Text="8" RelativePanel.RightOf="image" RelativePanel.Below="Title" HorizontalAlignment="Left" Width="271" Height="31" Padding="10,0,0,0" VerticalAlignment="Top" />
+            <Image x:Name="image" HorizontalAlignment="Left" Height="250" Width="176" Margin="0,38,0,0" VerticalAlignment="Top"/>
+            <ComboBox HorizontalAlignment="Left" Height="36" Margin="181,98,-234,-102" VerticalAlignment="Top" Width="117"/>
+        </RelativePanel>
     </Grid>
 </Page>
