--- a/Cafeine/Styles/Splitview.xaml
+++ b/Cafeine/Styles/Splitview.xaml
@@ -12,7 +12,7 @@
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Top" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
-        <Setter Property="VerticalContentAlignment" Value="{x:Null}" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Background" Value="#FF2F343A" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="Content" Value="&#xE700;" />
